--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <title> Hello World </title>
 </head>
 <body>
-    
+    <header>
+        <h1>Hello World</h1>
+        <p>Que bom te ver por aqui, Fulano</p>
+
+    </header>
+
+    <section>
+        <h2>HTML</h2>
+        <P>Linguagem de Marcação de Hipertexto</P>
+
+        <h2>CSS</h2>
+        <P>Folha de estilo em cascata</P>
+
+    </section>
+
+    <footer>
+        <p>Uma página desenvolvida por Alura Start</p>
+
+    </footer>
 </body>
 </html>
