--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <h2>CSS</h2>
         <P>Folha de estilo em cascata</P>
-
+        <img src="imagem/Olá .Mundo.png" alt="imagens com figuras planas">
     </section>
 
     <footer>
