--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <h1>Hello World</h1>
-        <p>Que bom te ver por aqui, Fulano</p>
+        <p>Que bom te ver por aqui, Fulanoooo</p>
 
     </header>
 
@@ -18,7 +18,7 @@
 
         <h2>CSS</h2>
         <P>Folha de estilo em cascata</P>
-        <img src="imagem/Olá .Mundo.png" alt="imagens com figuras planas">
+        <img src="Olá Mundo.png" alt="imagens com figuras planas">
     </section>
 
     <footer>
