--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Hello World </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>Hello World</h1>
-        <p>Que bom te ver por aqui, Fulanoooo</p>
+        <p>Que bom te ver por aqui, <span id="nome-usuário"> Fulanoooo</span></p>
 
     </header>
 
     <section>
         <h2>HTML</h2>
-        <P>Linguagem de Marcação de Hipertexto</P>
+        <P><span class="texto-inglês">Linguagem</span> de Marcação de Hipertexto</P>
 
         <h2>CSS</h2>
-        <P>Folha de estilo em cascata</P>
-        <img src="Olá Mundo.png" alt="imagens com figuras planas">
+        <P><span class="texto-inglês">Folha</span> de estilo em cascata</P>
+        <img src="Olá Mundo.png" alt="imagens com figuras planas"> 
     </section>
 
     <footer>
